--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,15 +7,17 @@ export(cap_first)
 export(categorise)
 export(clean_strings)
 export(copy_df)
+export(fa.load)
+export(fa.score)
 export(likert_convert)
+export(maxmin)
 export(pc_change)
+export(plain_num)
 export(replace_na_range)
 export(sav_to_rds)
-export(str_replace_nth)
 export(superspread)
 export(superspread_count)
 export(superspread_fill)
 export(timed_fn)
-export(tokenise_ngram)
 import(haven)
 import(stringr)
