--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,13 +3,14 @@
 export(CAGR)
 export(any_x)
 export(append_to_list)
-export(cap_first)
 export(categorise)
 export(clean_strings)
 export(copy_df)
 export(create_named_list)
 export(extract_fa_loads)
+export(labelled_quantile)
 export(likert_convert)
+export(likert_reverse)
 export(maxmin)
 export(pc_change)
 export(read_df)
@@ -17,6 +18,7 @@ export(remove_na_only)
 export(replace_na_range)
 export(run_hclust)
 export(sav_to_rds)
+export(split_tt)
 export(superspread)
 export(superspread_count)
 export(superspread_fill)
