--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,9 @@ Title: Provide Support Functions for Survey Analysis
 Version: 0.1.0
 Author: Martin Chan
 Maintainer: Martin Chan <martinchan53@gmail.com>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Description: A R package containing useful support functions for survey analysis.
+License: GNU General Public License v3.0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Imports: dplyr,	haven, stringr
+Imports: base,dplyr,stringr,stats,utils,tibble,readr,haven,tidyr,psych,magrittr
