--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
-Package: surveytools
+Package: surveytoolbox
 Type: Package
-Title: Provide Support Functions for Survey Analysis
+Title: Useful Support Functions for Survey Analysis
 Version: 0.1.0
 Author: Martin Chan
 Maintainer: Martin Chan <martinchan53@gmail.com>
@@ -9,4 +9,4 @@ License: GNU General Public License v3.0
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
-Imports: base,dplyr,stringr,stats,utils,tibble,readr,haven,tidyr,psych,magrittr, XML
+Imports: base,dplyr,stringr,stats,utils,tibble,readr,haven,tidyr,psych,magrittr,purrr
