Update from SourceTree

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,9 +28,11 @@ export(sav_to_rds)
 export(set_vall)
 export(set_varl)
 export(split_tt)
+export(super_spread)
 export(superspread)
 export(superspread_count)
 export(superspread_fill)
 export(timed_fn)
+import(dplyr)
 import(haven)
 import(stringr)
