--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ export(sav_to_rds)
 export(set_vall)
 export(set_varl)
 export(split_tt)
+export(squish)
 export(superspread)
 export(superspread_count)
 export(superspread_fill)
