Update function documentation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(categorise)
 export(char_to_lab)
 export(clean_strings)
 export(copy_df)
+export(cor_to_df)
 export(create_named_list)
 export(data_dict)
 export(extract_fa_loads)
