--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.1.0
 Author: Martin Chan
 Maintainer: Martin Chan <martinchan53@gmail.com>
 Description: A R package containing useful support functions for survey analysis.
-License: GNU General Public License v3.0
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
