--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(CAGR)
 export(any_x)
 export(append_to_list)
 export(apply_row)
+export(as_nps)
 export(as_percent)
 export(box_it)
 export(categorise)
