--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(likert_reverse)
 export(look_up)
 export(maxmin)
 export(read_df)
+export(recode_vallab)
 export(remove_na_only)
 export(replace_na_range)
 export(run_hclust)
