--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,9 +4,12 @@ Title: Useful Support Functions for Survey Analysis
 Version: 0.1.0
 Author: Martin Chan
 Maintainer: Martin Chan <martinchan53@gmail.com>
+URL: https://github.com/martinctc/surveytoolbox
 Description: A R package containing useful support functions for survey analysis.
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
 Imports: base,dplyr,stringr,stats,utils,tibble,readr,haven,tidyr,psych,magrittr,purrr, data.table
+Suggests: 
+    testthat
