--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,8 +36,13 @@ export(superspread)
 export(superspread_count)
 export(superspread_fill)
 export(timed_fn)
+export(varl_tb)
 import(dplyr)
 import(haven)
 import(stringr)
 importFrom(data.table,":=")
 importFrom(magrittr,"%>%")
+importFrom(purrr,is_null)
+importFrom(purrr,map)
+importFrom(tibble,enframe)
+importFrom(tidyr,unnest)
