--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(apply_row)
 export(as_nps)
 export(as_percent)
 export(box_it)
+export(calc_pc_loglin)
 export(categorise)
 export(char_to_lab)
 export(clean_strings)
