Added as_nps_cat function
Also tweaked code style for some other functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(any_x)
 export(append_to_list)
 export(apply_row)
 export(as_nps)
+export(as_nps_cat)
 export(as_percent)
 export(box_it)
 export(calc_pc_loglin)
