--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,11 +38,13 @@ export(superspread)
 export(superspread_count)
 export(superspread_fill)
 export(timed_fn)
+export(ttest_nps)
 export(varl_tb)
 import(dplyr)
 import(haven)
 import(stringr)
 importFrom(data.table,":=")
+importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(purrr,is_null)
 importFrom(purrr,map)
