--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(as_nps_cat)
 export(as_percent)
 export(box_it)
 export(calc_pc_loglin)
+export(calc_weights)
 export(categorise)
 export(char_to_lab)
 export(clean_strings)
