Fix R CMD run notes and warnings

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,4 +50,5 @@ importFrom(magrittr,"%>%")
 importFrom(purrr,is_null)
 importFrom(purrr,map)
 importFrom(tibble,enframe)
+importFrom(tidyr,drop_na)
 importFrom(tidyr,unnest)
