--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Description: A R package containing useful support functions for survey analysis
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 7.1.0
+RoxygenNote: 7.1.1
+Roxygen: list(markdown = TRUE)
 Imports: base,dplyr,stringr,stats,utils,tibble,readr,haven,tidyr,psych,magrittr,purrr,glue,data.table
 Suggests: 
     testthat
