feat: add `chr_to_var()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(calc_pc_loglin)
 export(calc_weights)
 export(categorise)
 export(char_to_lab)
+export(chr_to_var)
 export(clean_strings)
 export(copy_df)
 export(cor_to_df)
