--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,20 @@ Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.2.3
 Roxygen: list(markdown = TRUE)
-Imports: base,dplyr,stringr,stats,utils,tibble,readr,haven,tidyr,psych,magrittr,purrr,glue,data.table
+Imports: 
+    base,
+    dplyr,
+    stringr,
+    stats,
+    utils,
+    tibble,
+    readr,
+    haven,
+    tidyr,
+    psych,
+    magrittr,
+    purrr,
+    glue,
+    data.table
 Suggests: 
     testthat
