feat: add wrap text feature

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,7 @@ export(superspread_fill)
 export(timed_fn)
 export(ttest_nps)
 export(varl_tb)
+export(wrap_text)
 import(dplyr)
 import(haven)
 import(stringr)
