feat: add `create_freq_dist()`

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(chr_to_var)
 export(clean_strings)
 export(copy_df)
 export(cor_to_df)
+export(create_freq_dist)
 export(create_named_list)
 export(data_dict)
 export(extract_fa_loads)
@@ -40,6 +41,7 @@ export(squish)
 export(superspread)
 export(superspread_count)
 export(superspread_fill)
+export(test_chisq)
 export(timed_fn)
 export(ttest_nps)
 export(varl_tb)
@@ -47,12 +49,19 @@ export(wrap_text)
 import(dplyr)
 import(haven)
 import(stringr)
+importFrom(broom,tidy)
 importFrom(data.table,":=")
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,select)
 importFrom(glue,glue)
 importFrom(magrittr,"%>%")
 importFrom(purrr,is_null)
 importFrom(purrr,map)
+importFrom(rstatix,chisq_test)
+importFrom(stats,fisher.test)
 importFrom(tibble,enframe)
 importFrom(tibble,tibble)
 importFrom(tidyr,drop_na)
+importFrom(tidyr,pivot_longer)
 importFrom(tidyr,unnest)
